add responsive and modify

--- a/product_detail.css
+++ b/product_detail.css
@@ -45,15 +45,18 @@ body {
 
 
 /* Product Details Start */
+/* main container */
 .product_container{
     display: flex;
     margin-bottom: 40px;
 
 }
+
+/* left section */
 .product_angles{
     flex:2;
     display: inline-block;
-    margin: 0px 0px 0px 20px;
+    margin: 0px;
 }
 .product_angles img{
     width: 90px;
@@ -61,12 +64,14 @@ body {
     margin-top: 40px;
     border-radius: 5px;
     border:1px solid #595A63;
-    margin-left: 10px;
+    margin-left: 20px;
 
 }
 .product_angles img:hover{
     border:1px solid  white;
 }
+
+/* middle bg img */
 .product_img{
     margin: 35px 0px 0px 50px;
     flex:3;
@@ -78,11 +83,12 @@ body {
     height: 500px;
     margin-right: 50px;
 }
+
+/* right section */
 .product_details{
     flex:7;
     margin: 40px 0px 0px 50px;
 }
-
 .product_details i{
     color: red;
     font-size: smaller;
@@ -103,26 +109,94 @@ body {
 }
 .offers_dis a{
     background-color: #1c1c1c;
-                border: 1px solid #595A63;
-                height: auto;
-                width: 220px;
-                padding: 10px 10px 10px;
-                text-align: left;
-                font-size: 16px;
-                text-decoration: none;
-                color: lightsteelblue;
-                line-height: 20px;
-                border-radius: 2px;
+    border: 1px solid #595A63;
+    height: auto;
+    width: 220px;
+    padding: 10px 10px 10px;
+    text-align: left;
+    font-size: 16px;
+    text-decoration: none;
+    color: lightsteelblue;
+    line-height: 20px;
+    border-radius: 2px;
 }
+
+/* Small screens (max-width: 767px) */
+@media (max-width: 767px) {
+    .product_container{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    margin-bottom: 20px;   
+    }
+    /* left section */
+    .product_angles{
+        display: inline-block;
+        margin: 0px;
+    }
+        
+    /* middle bg img */
+    .product_img{
+        margin: 35px 40px;
+    }
+    .product_img img{
+        top: 5px;
+        position: relative;
+        width: 400px; 
+        height: 400px;
+    }
+    /* right section */
+    .product_details{
+        margin: 80px 0px 0px 50px;
+    }
+    
+} 
+
+/* Small screens (max-width: 767px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+    .product_container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    margin-bottom: 20px;   
+    }
+    /* left section */
+    .product_angles{
+        display: inline-block;
+        margin: 0px;
+    }
+        
+    /* middle bg img */
+    .product_img{
+        margin: 35px 0px ;
+    }
+    .product_img img{
+        top: 5px;
+        position: relative;
+        width: 400px; 
+        height: 400px;
+    }
+    /* right section */
+    .product_details{
+        margin: 80px 0px 0px 50px;
+    }
+
+} 
+
+/* Product Details End */
+
 
 
 /* Other Info Start */
 .other_info{
-    /* display: flex; */
     margin: 120px 0px 0px 40px;
     display: grid;
     grid-template-columns: repeat(4,1fr);
+    /* justify-content: center; */
 
+}
+.brand_details{
+    margin-top: 10px;
+    list-style: none; 
+    text-align: start;
 }
 .Specifications{
     margin-top: 10px;
@@ -156,7 +230,6 @@ body {
 
 }
 .other_head:hover{
-    font-size: large;
     border: 1px solid #595A63;
     background-color: #ff0000;
     color: lightsteelblue;
@@ -164,9 +237,6 @@ body {
     border-radius: 4px;
     height: 37px;
     width: 150px;
-    padding: 8px 20px;
-    position: relative;
-    text-decoration: none;
     cursor: pointer;
 }
 /* Other Info End */
@@ -176,21 +246,22 @@ body {
 .Addcart {
     width: 100%;
     height: 100%;
-    background-color: #1c1c1c;  
+    background-color: #1c1c1c;
+    margin: 40px 0px;
     color: lightsteelblue;
-
 }
 .Addcart h2{
     font-size: 24px;
-    margin: 80px 0px 0px 0px ;
+    margin: 80px 0px 40px 0px;
     text-align: center;
 }
 .Addcartrow1{
     display: flex;
-    margin: 80px 170px;
+    justify-content: center;
+    margin: 20px 0px;
 }
 .addproduct{
-    height: 354px;
+    height: 360px;
     width: 239px;
     border: 1px solid  #444;
     margin: 3px;
@@ -199,7 +270,12 @@ body {
     width: 100px;
     height: 100px;
     object-fit: contain;
-    margin: 10px 0px 35px 60px;}
+    margin: 28px 0px 35px 60px;
+    transition: transform .2s;
+}
+.prodimg:hover{
+    transform: scale(1.4);
+}
 .proddetail{
     margin: 0px 14px;    
 }
@@ -256,7 +332,7 @@ body {
     justify-content: center;
     list-style: none;
     padding: 0;
-    margin-top: 20px;
+    margin-top: 40px;
     margin-bottom: 40px;
     
 }
@@ -309,96 +385,128 @@ body {
 /*--footer start--- */
 .footerHome {
     background-color: #111;
-    /* color: #fff; */
-    padding: 40px 0;
     font-family: 'Arial', sans-serif;
 }
-  
-  .footer-container {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    margin: 0px 0px 40px 20px;
 
-  }
-  .footer-column1{
-    flex: 8;
-  }
-  .footer-column {
-    margin-left: 144px;
-    flex: 4;
-  }
-  
-  .footerHeading {
-    font-size: 18px;
-  }
-  .headDiscription{
-    margin-top: 15px;
-     font-size: 15px;
-    opacity: 0.7;
-  }
-  
-  .footer-column ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .footer-column ul li {
-    margin-bottom: 10px;
-    margin-top: 18px;
-  }
-  
-  .footer-column ul li a {
-    color: lightsteelblue;
-    opacity: 0.6;
-    text-decoration: none;
-    font-size: 14px;
-  }
-  
-  .footer-column ul li a:hover {
-    color: #e63946;
-  }
-  
-  .footer-column form {
-    /* display: flex; */
-  }
-  
-  .footer-column1 input {
-    background-color: #111;
-    margin-top: 15px;
-    padding: 10px;
-    border: 1px solid lightsteelblue;
-    outline: none;
-    width: 70%;
-  }
-  
-  .footer-column1 button {
+.footer-container {
+display: flex;
+justify-content: space-around;
+/* margin-left: 20px; */
+padding-top: 40px;
+
+}
+.footer-column1{
+flex: 8;
+margin-left: 20px;
+}
+.footer-column {
+margin-left: 144px;
+flex: 4;
+}
+
+.footerHeading {
+font-size: 18px;
+}
+.headDiscription{
+margin-top: 15px;
+    font-size: 15px;
+opacity: 0.7;
+}
+
+.footer-column ul {
+list-style: none;
+padding: 0;
+}
+
+.footer-column ul li {
+margin-bottom: 10px;
+margin-top: 18px;
+}
+
+.footer-column ul li a {
+color: lightsteelblue;
+opacity: 0.6;
+text-decoration: none;
+font-size: 14px;
+}
+
+.footer-column ul li a:hover {
+color: #e63946;
+}
+
+.footer-column form {
+/* display: flex; */
+}
+
+.footer-column1 input {
+background-color: #111;
+margin-top: 15px;
+padding: 10px;
+border: 1px solid lightsteelblue;
+outline: none;
+width: 70%;
+}
+
+.footer-column1 button {
     margin-top: 15px;
     padding: 8px 80px 8px 20px;
-    /* padding: 19px; */
     border: none;
     border-radius: 7px;
     background-color: #ec081b;
     color: #fff;
     cursor: pointer;
     width: 30%;
-  }
-  /*--footer End--- */
- 
-/* -- footer Bottom Start -- */
-  .footer-bottom {
-    display: flex;
-    justify-content: space-between;
-    margin: 40px 0px 0px 0px;
-    border-top: 1px solid #333;
+}
 
-  }
-  
-  .footerdisc {
-    margin: 25px 0px 0px 20px;
-    font-size: 14px;
-  }
-  
+/* Small screens (max-width: 767px) */
+@media (max-width: 767px) {   
+.footer-container {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-content: space-around;
+    padding-top: 20px;   
+    }
+.footer-column1{
+    margin-top: 40px;
+    margin-left: 20px;
+    }
+    .footer-column {
+    margin-top: 40px;
+    margin-left: 20px;
+    }
+}
+
+/* Medium screens (min-width: 768px and max-width: 1024px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+    .footer-container {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        justify-content: space-around;
+        padding-top: 20px;   
+    }
+    .footer-column1{
+        margin-top: 40px;
+        margin-left: 20px;
+    }
+        .footer-column {
+        margin-top: 40px;
+        margin-left: 20px;
+    }
+} 
+
+/*--footer End--- */
+
+/* -- footer Bottom Start -- */
+.footer-bottom {
+display: flex;
+justify-content: space-between;
+margin: 40px 0px 0px 0px;
+border-top: 1px solid #333;
+}
+.footerdisc {
+margin: 30px 0px 30px 20px;
+font-size: 14px;
+}
 .social-icons{
     margin: 25px 70px 0px 0px;
     display: flex;
