--- a/cart.css
+++ b/cart.css
@@ -5,7 +5,6 @@
     font-family: Arial, sans-serif;
 }
 body {
-    /* background-color: #121212; */
     background-color: #1c1c1c;
     color: lightsteelblue;
 }
@@ -13,7 +12,7 @@ body {
 /* header Start  */
 .header{
     display: flex;
-    margin: 20px 0px 0px 20px;   
+    margin: 20px 0px;   
 }
 .heading{
     flex: 1;
@@ -41,17 +40,14 @@ body {
 }
 /* header End  */
 
+
 /* order Start */
 .order{
     margin-top: 50px;
     margin-bottom: 100px;
-
     display: flex;
-
 }
-
 /* order cart start */
-
 .ordercart{
     flex: 7;
     background-color: #222;
@@ -117,7 +113,6 @@ body {
     font-size: 18px;
     cursor: pointer;
     outline: none;
- 
 }
 .addbutton span{
     background-color: #121212;
@@ -145,7 +140,6 @@ body {
 }
 .summary-heading{
     margin-top: 40px;
-
 }
 .summary-details{
     margin-top: 40px;
@@ -185,100 +179,133 @@ body {
 
 /*--footer start--- */
 .footerHome {
-    background-color: #111;
-    /* color: #fff; */
-    padding: 40px 0;
-    font-family: 'Arial', sans-serif;
+  background-color: #111;
+  font-family: 'Arial', sans-serif;
 }
-  
-  .footer-container {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    margin: 0px 0px 40px 20px;
 
+.footer-container {
+display: flex;
+justify-content: space-around;
+/* margin-left: 20px; */
+padding-top: 40px;
+
+}
+.footer-column1{
+flex: 8;
+margin-left: 20px;
+}
+.footer-column {
+margin-left: 144px;
+flex: 4;
+}
+
+.footerHeading {
+font-size: 18px;
+}
+.headDiscription{
+margin-top: 15px;
+  font-size: 15px;
+opacity: 0.7;
+}
+
+.footer-column ul {
+list-style: none;
+padding: 0;
+}
+
+.footer-column ul li {
+margin-bottom: 10px;
+margin-top: 18px;
+}
+
+.footer-column ul li a {
+color: lightsteelblue;
+opacity: 0.6;
+text-decoration: none;
+font-size: 14px;
+}
+
+.footer-column ul li a:hover {
+color: #e63946;
+}
+
+.footer-column form {
+/* display: flex; */
+}
+
+.footer-column1 input {
+background-color: #111;
+margin-top: 15px;
+padding: 10px;
+border: 1px solid lightsteelblue;
+outline: none;
+width: 70%;
+}
+
+.footer-column1 button {
+  margin-top: 15px;
+  padding: 8px 80px 8px 20px;
+  border: none;
+  border-radius: 7px;
+  background-color: #ec081b;
+  color: #fff;
+  cursor: pointer;
+  width: 30%;
+}
+
+/* Small screens (max-width: 767px) */
+@media (max-width: 767px) {   
+.footer-container {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  justify-content: space-around;
+  padding-top: 20px;   
   }
-  .footer-column1{
-    flex: 8;
+.footer-column1{
+  margin-top: 40px;
+  margin-left: 20px;
   }
   .footer-column {
-    margin-left: 144px;
-    flex: 4;
+  margin-top: 40px;
+  margin-left: 20px;
   }
-  
-  .footerHeading {
-    font-size: 18px;
-  }
-  .headDiscription{
-    margin-top: 15px;
-     font-size: 15px;
-    opacity: 0.7;
-  }
-  
-  .footer-column ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .footer-column ul li {
-    margin-bottom: 10px;
-    margin-top: 18px;
-  }
-  
-  .footer-column ul li a {
-    color: lightsteelblue;
-    opacity: 0.6;
-    text-decoration: none;
-    font-size: 14px;
-  }
-  
-  .footer-column ul li a:hover {
-    color: #e63946;
-  }
-  
-  .footer-column form {
-    /* display: flex; */
-  }
-  
-  .footer-column1 input {
-    background-color: #111;
-    margin-top: 15px;
-    padding: 10px;
-    border: 1px solid lightsteelblue;
-    outline: none;
-    width: 70%;
-  }
-  
-  .footer-column1 button {
-    margin-top: 15px;
-    padding: 8px 80px 8px 20px;
-    /* padding: 19px; */
-    border: none;
-    border-radius: 7px;
-    background-color: #ec081b;
-    color: #fff;
-    cursor: pointer;
-    width: 30%;
-  }
-  
-/* -- footer Bottom Start -- */
-  .footer-bottom {
-    display: flex;
-    justify-content: space-between;
-    margin: 40px 0px 0px 0px;
-    border-top: 1px solid #333;
+}
 
+/* Medium screens (min-width: 768px and max-width: 1024px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .footer-container {
+      display: grid;
+      grid-template-columns: repeat(3,1fr);
+      justify-content: space-around;
+      padding-top: 20px;   
   }
-  
-  .footerdisc {
-    margin: 25px 0px 0px 20px;
-    font-size: 14px;
+  .footer-column1{
+      margin-top: 40px;
+      margin-left: 20px;
   }
-  
+      .footer-column {
+      margin-top: 40px;
+      margin-left: 20px;
+  }
+} 
+
+/*--footer End--- */
+
+/* -- footer Bottom Start -- */
+.footer-bottom {
+display: flex;
+justify-content: space-between;
+margin: 40px 0px 0px 0px;
+border-top: 1px solid #333;
+}
+.footerdisc {
+margin: 30px 0px 30px 20px;
+font-size: 14px;
+}
 .social-icons{
-    margin: 25px 70px 0px 0px;
-    display: flex;
-    gap: 20px;
+  margin: 25px 70px 0px 0px;
+  display: flex;
+  gap: 20px;
 
 }
-/* -- footer Bottom Start -- */
+/* -- footer Bottom End -- */
