modify in products detail css

--- a/cart.css
+++ b/cart.css
@@ -172,6 +172,7 @@ body {
     background-color: red;
     font-size: large;
     border-radius: 5px;
+    cursor: pointer;
 }
 /* order summary End */
 
